chore(api-gateway): update CORS config and property settings